# QtImageProcess

./: .gitignore  CMakeLists.txt  README.md
headers/: HistogramDialog.hpp  arts_manipulator.hpp  based.hpp  dimension_manipulator.hpp  frequency_manipulator.hpp  globe_define_words.h  licence_recognition_util.hpp  license_recognition_dialog.hpp  mainWindow.h  manipulator.hpp  morphology_manipulator.hpp  noise_dialog.hpp  segmentation_manipulator.hpp  ui_add_noise_dialog.h  ui_histogramdialog.h  ui_licence_recognition_dialog.h  ui_mainwindow.h  util.hpp
sources/: arts_manipulator.cpp  based.cpp  dimension_manipulator.cpp  frequency_manipulator.cpp  histogram_dialog.cpp  licence_recognition_dialog.cpp  licence_recognition_util.cpp  main.cpp  mainWindow.cpp  manipulator.cpp  morphology_manipulator.cpp  noise_dialog.cpp  segmentation_manipulator.cpp  util.cpp
ui/: add_noise_dialog.ui  histogramdialog.ui  licence_recognition_dialog.ui  mainwindow.ui
ui/icons/: resources.qrc
